--- a/testcommitfile.html
+++ b/testcommitfile.html
@@ -12,6 +12,7 @@
   <body>
       
     This is a test. 
+    This is also a test.
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
