--- a/tickets.html
+++ b/tickets.html
@@ -8,10 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel= "stylesheet" href= "tickets.css">
     </head>
-    <body>
-        <h1 class= "text-center">Upcoming Events</h1>
-        <div></div>
+    <body class= "body">
+        <h1 class= "text-center text-success" id= "header1" >Upcoming Events</h1>
+        
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
