--- a/tickets.html
+++ b/tickets.html
@@ -12,7 +12,15 @@
     </head>
     <body>
         <div class= "movie-container">
-            
+            <label>Pick a fight</label>
+            <select id= "movie">
+                <option value= "300">UFC 246</option>
+                <option value= "450">UFC 247</option>
+                <option value= "2500">UFC 248</option>
+                <option value= "75">UFC 249</option>
+                <option value= "250">UFC 250</option>
+            </select>
+
         </div>
       
     <!-- Optional JavaScript -->
