--- a/tickets.html
+++ b/tickets.html
@@ -14,15 +14,38 @@
         <div class= "movie-container">
             <label>Pick a fight</label>
             <select id= "movie">
-                <option value= "300">UFC 246</option>
-                <option value= "450">UFC 247</option>
-                <option value= "2500">UFC 248</option>
-                <option value= "75">UFC 249</option>
-                <option value= "250">UFC 250</option>
+                <option value= "300">UFC 246 ($300)</option>
+                <option value= "450">UFC 247($450)</option>
+                <option value= "2500">UFC 248($2500)</option>
+                <option value= "75">UFC 249($249)</option>
+                <option value= "250">UFC 250($250)</option>
             </select>
 
         </div>
-      
+
+        <ul class="showcase">
+            <li>
+                <div  class= "seat"></div>
+                <small>N/A</small> 
+
+            </li>
+            <li>
+                <div  class= "seat occupied"></div>
+                <small>Occupied</small> 
+
+            </li>
+            <li>
+                <div  class= "seat selected"></div>
+                <small>Selected</small> 
+
+            </li>
+        </ul>
+
+        <div class="container">
+            <div class="screen"></div>
+            
+        </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src= "tickets.js"></script>
