--- a/tickets.html
+++ b/tickets.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class= "col"> 
                     <!-- putting seats on top -->
-                    <div class="row flex-column align-items-center">
+                    <div class="row flex-row justify-content-center">
                         <div class="seat"></div>
                         <div class="seat"></div>
                         <div class="seat"></div>
