--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="col-lg-8">
                             <div class="hero-text">
                                 <h1>What is Crossfit?</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
                                     incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
                                     gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
                                 <a href="#" class="primary-btn">Read More</a>
