centered the text

--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,7 @@
     <link rel= "stylesheet" href= "tickets.css">
   </head>
   <body>
-        
+        <h1 class= "text-dark text-center">Fighters</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
