added UFC fighters

--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,58 @@
     <link rel= "stylesheet" href= "tickets.css">
   </head>
   <body>
-        <h1 class= "text-dark text-center">Fighters</h1>
+        <h1 class= "text-dark text-center">Become A Fighter</h1>
+        <div id= "Fighters">
+            <div class= "UFC fighters">
+                
+                <div>Khabib Nurmagomedov</div>
+                <div>Israel Adesanya</div>
+                <div>Kamaru Usman</div>
+                <div>Jon Jones</div>
+                <div>Stipe Miocic</div>
+                <div>Daniel Cormier</div>
+                <div>Conor Mcgregor</div>
+                <div>Donald "Cowboy" Cerrone</div>
+                <div>Nate Diaz</div>
+                <div>Weili Zhang</div>
+                <div> Amanda Nunes</div>
+                <div>Valentina Shevchonko</div>
+                <div>Ronda Rousey</div>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+
+
+
+
+        </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
