changed title to fighter portal

--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,7 @@
     <link rel= "stylesheet" href= "tickets.css">
   </head>
   <body>
-        <h1 class= "text-dark text-center">Become A Fighter</h1>
+        <h1 class= "text-dark text-center">Fighter Portal</h1>
         <div id= "Fighters">
             <div class= "UFC fighters">
                 
