--- a/tickets.html
+++ b/tickets.html
@@ -29,20 +29,22 @@
                 <div>Valentina Shevchonko</div>
                 <div>Ronda Rousey</div>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class= "Bellator Fighters">
+                <div>Ben Askren</div>
+                <div>Patricio Freire</div>
+                <div>Eddie Alvarez</div>
+                <div>Douglas Lima</div>
+                <div>Rory Macdonald</div>
+                <div>A.J Mckee</div>
+                <div>Rick Hawn</div>
+                <div>Gegard Mousasi</div>
+                <div>Patricky Freire</div>
+                <div>Vitaly Minakov</div>
+                <div>Cris Cyborg</div>
+                <div>Ilima-lei Macfarlane</div>
+                <div>Veta Arteaga</div>
+                <div>Diana Avsaragova</div>
+            </div>
             <div></div>
             <div></div>
             <div></div>
