added khabib and israel adesanya

--- a/tickets.html
+++ b/tickets.html
@@ -15,8 +15,14 @@
         <div id= "Fighters">
             <div class= "UFC fighters">
                 
-                <div>Khabib Nurmagomedov</div>
-                <div>Israel Adesanya</div>
+                <div class= "col-1">Khabib Nurmagomedov
+                    <img src="https://media.gettyimages.com/photos/khabib-nurmagomedov-of-russia-poses-for-a-portrait-backstage-after-picture-id943251436?s=612x612" class= "col 1">
+
+                </div>
+                <div class= "col-1">Israel Adesanya
+                    <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/mma/players/full/4285679.png" class= "col-1">
+
+                </div>
                 <div>Kamaru Usman</div>
                 <div>Jon Jones</div>
                 <div>Stipe Miocic</div>
