--- a/tickets.html
+++ b/tickets.html
@@ -23,7 +23,7 @@
                 <div>
                     
                     Israel Adesanya
-                    <img src="http://via.placeholder.com/50x50jpeg" width="50px" class= "">
+                    <img src="images/i.png" width="50px" class= "">
                     
                 </div>
                 <div>Kamaru Usman</div>
