--- a/tickets.html
+++ b/tickets.html
@@ -26,8 +26,14 @@
                     <img src="images/i.png" width="50px" class= "">
                     
                 </div>
-                <div>Kamaru Usman</div>
-                <div>Jon Jones</div>
+                <div>Kamaru Usman
+                    <img src= "images/kamaru.jpeg" width= "50px">
+
+                </div>
+                <div>Jon Jones
+                    <img src="images/jonjones.jpeg" width="50px">
+
+                </div>
                 <div>Stipe Miocic</div>
                 <div>Daniel Cormier</div>
                 <div>Conor Mcgregor</div>
