--- a/tickets.html
+++ b/tickets.html
@@ -27,14 +27,17 @@
                     
                 </div>
                 <div>Kamaru Usman
-                    <img src= "images/kamaru.jpeg" width= "50px">
+                    <img src= "images/kamaru.jpeg" width= "70px">
 
                 </div>
                 <div>Jon Jones
-                    <img src="images/jonjones.jpeg" width="50px">
+                    <img src="images/jonjones.jpeg" width="80px">
 
                 </div>
-                <div>Stipe Miocic</div>
+                <div>Stipe Miocic
+                    <img src="images/stipe.jpeg" width="70px">
+
+                </div>
                 <div>Daniel Cormier</div>
                 <div>Conor Mcgregor</div>
                 <div>Donald "Cowboy" Cerrone</div>
