added conor mcgregor and DC

--- a/tickets.html
+++ b/tickets.html
@@ -38,8 +38,13 @@
                     <img src="images/stipe.jpeg" width="70px">
 
                 </div>
-                <div>Daniel Cormier</div>
-                <div>Conor Mcgregor</div>
+                <div>Daniel Cormier
+                    <img src="images/DC.jpg" width="50px">
+
+                </div>
+                <div>Conor Mcgregor
+                    <img src="images/conor-mcgregor-quotes.jpg" width="50px">
+                </div>
                 <div>Donald "Cowboy" Cerrone</div>
                 <div>Nate Diaz</div>
                 <div>Weili Zhang</div>
