nate diaz picture added

--- a/tickets.html
+++ b/tickets.html
@@ -45,8 +45,16 @@
                 <div>Conor Mcgregor
                     <img src="images/conor-mcgregor-quotes.jpg" width="50px">
                 </div>
-                <div>Donald "Cowboy" Cerrone</div>
-                <div>Nate Diaz</div>
+
+                <div>
+                    Donald "Cowboy" Cerrone
+                <img src="images/cerrone.jpeg" width="50px">
+                </div>
+
+                <div>
+                    Nate Diaz
+                    <img src="images/Nate.jpeg" width="50px">
+                </div>
                 <div>Weili Zhang</div>
                 <div> Amanda Nunes</div>
                 <div>Valentina Shevchonko</div>
