the UFC fighters complete

--- a/tickets.html
+++ b/tickets.html
@@ -48,17 +48,33 @@
 
                 <div>
                     Donald "Cowboy" Cerrone
-                <img src="images/cerrone.jpeg" width="50px">
+                <img src="images/cerrone.jpeg" height= "50px" width="50px">
                 </div>
 
                 <div>
                     Nate Diaz
                     <img src="images/Nate.jpeg" width="50px">
                 </div>
-                <div>Weili Zhang</div>
-                <div> Amanda Nunes</div>
-                <div>Valentina Shevchonko</div>
-                <div>Ronda Rousey</div>
+
+                <div>
+                    Weili Zhang
+                    <img src="images/ZHANG_WEILI_BELT.png" width="50px">
+                </div>
+
+                <div> 
+                    Amanda Nunes
+                    <img src="images/amanda.jpeg" width="50px">
+                </div>
+
+                <div>
+                    Valentina Shevchonko
+                    <img src="images/valentina.jpeg" width="50px">
+                </div>
+
+                <div>
+                    Ronda Rousey
+                    <img src="images/ronda.jpeg" width="50px">
+                </div>
             </div>
             <div class= "Bellator Fighters">
                 <div>Ben Askren</div>
