adding bellator fighters

--- a/tickets.html
+++ b/tickets.html
@@ -76,16 +76,51 @@
                     <img src="images/ronda.jpeg" width="50px">
                 </div>
             </div>
-            <div class= "Bellator Fighters">
-                <div>Ben Askren</div>
-                <div>Patricio Freire</div>
-                <div>Eddie Alvarez</div>
-                <div>Douglas Lima</div>
-                <div>Rory Macdonald</div>
-                <div>A.J Mckee</div>
-                <div>Rick Hawn</div>
-                <div>Gegard Mousasi</div>
-                <div>Patricky Freire</div>
+            
+            <div id= "Bellator Fighters" class= "d-flex">
+                <div>
+                    Ben Askren
+                    <img src= "images/Ben.jpg" width="70px" height="50px">
+                </div>
+                <div>
+                    Patricio Freire
+                    <img src="images/friere.jpeg" width="90px">
+                </div>
+
+                <div>
+                    Eddie Alvarez
+                    <img src="images/eddie.jpeg" width="50px">
+                </div>
+
+                <div>
+                    Douglas Lima
+                    <img src="images/douglas .jpeg" width="50px">
+                </div>
+                <div>
+                    Rory Macdonald
+                    <img src="images/macdonald.jpg" width="70px">
+                
+                </div>
+
+                <div>
+                    A.J Mckee
+                    <img src="images/Mckee.jpeg" width="80px">
+                </div>
+
+                <div>
+                    Rick Hawn
+                    <img src="images/rick.jpeg" width="90px">
+                </div>
+
+                <div>
+                    Gegard Mousasi
+                    <img src="images/mousasi.jpeg" width="50">
+                </div>
+
+                <div>
+                    Patricky Freire
+                    <img src="images/patricky.jpeg" width="80">
+                </div>
                 <div>Vitaly Minakov</div>
                 <div>Cris Cyborg</div>
                 <div>Ilima-lei Macfarlane</div>
