--- a/events.html
+++ b/events.html
@@ -517,7 +517,7 @@
     </section>
     <!-- Call To Section End -->
     <!-- Map Section Begin -->
-    <div class="map">
+    <!-- <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24182.553681405774!2d-73.99529774360377!3d40.744003480221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259737e225aa1%3A0x652ff78189c0e104!2sStuyvesant%20Town-Peter%20Cooper%20Village%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1567961277124!5m2!1sen!2sbd" height="585" style="border:0" allowfullscreen></iframe>
         <div class="map-address">
             <div class="map-address-text">
@@ -527,7 +527,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Map Section End -->
     <!-- Footer Section Begin -->
     <footer class="footer-section">
@@ -549,6 +549,75 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div>
             </div>
         </div>
+            <!-- News Ticker Section Begin -->
+    <footer class="footer-section">
+        <div class="ticker">
+            <div class="ticker-logo">
+              <div class="ticker-logo-channel">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="160px" height="160px" viewBox="0 0 500 500">
+                </svg>
+              </div>
+          </div>
+            <!-- <div class="ticker-tip">
+              <div class="ticker-tip-info">
+                <i class ="icon-info">i</i>
+                <span>The Gas Mask will make you look like a badass.<span>
+               </div>
+            </div>   -->
+            <div class="ticker-title">
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>             
+            </div>
+            <div class="ticker-news">
+              <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=15&showtitle=false&type=js"></script>
+              </span>
+              <!-- <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=1&showtitle=false&type=js"></script>
+              </span>
+              <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=1&showtitle=false&type=js"></script>
+              </span>
+              <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=1&showtitle=false&type=js"></script>
+              </span> -->
+            </div>
+          </div>
     </footer>
     <!-- Footer Section End -->
     <!-- Search model -->
