--- a/fighterportal.html
+++ b/fighterportal.html
@@ -46,8 +46,8 @@
                                 <li><a href="./events.html">Events</a></li>
                                 <li><a href="./become.html">Become A Fighter</a></li>
                                 <li><a href="./about-us.html">About Us</a></li>
-                                <li class="phone-num"><i class="fa fa-phone"></i><span>+546 990221 123</span></li>
-                                <li class="search-btn search-trigger"><i class="fa fa-search"></i></li>
+                                <li class="phone-num"><i class="fa fa-phone"></i><span></span></li>
+                                <!-- <li class="search-btn search-trigger"><i class="fa fa-search"></i></li> -->
                             </ul>
                         </nav>
                         <div id="mobile-menu-wrap"></div>
@@ -112,7 +112,7 @@
     </section>
     <!-- Contact Section End -->
     <!-- Map Section Begin -->
-    <div class="map">
+    <!-- <div class="map">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24182.553681405774!2d-73.99529774360377!3d40.744003480221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259737e225aa1%3A0x652ff78189c0e104!2sStuyvesant%20Town-Peter%20Cooper%20Village%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1567961277124!5m2!1sen!2sbd"
             height="585" style="border:0" allowfullscreen></iframe>
@@ -124,8 +124,8 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <!-- Map Section End -->
+    </div> --> -->
+    <!-- Map Section End
     <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container-fluid">
