--- a/about-us.html
+++ b/about-us.html
@@ -303,6 +303,103 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div>
             </div>
         </div>
+            <!-- News Ticker Section Begin -->
+    <footer class="footer-section">
+        <div class="ticker">
+            <div class="ticker-logo">
+              <div class="ticker-logo-channel">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="160px" height="160px" viewBox="0 0 500 500">
+                </svg>
+              </div>
+          </div>
+            <!-- <div class="ticker-tip">
+              <div class="ticker-tip-info">
+                <i class ="icon-info">i</i>
+                <span>The Gas Mask will make you look like a badass.<span>
+               </div>
+            </div>   -->
+            <div class="ticker-title">
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>
+              <span>MMA News</span>             
+            </div>
+            <div class="ticker-news">
+              <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=15&showtitle=false&type=js"></script>
+              </span>
+              <!-- <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=1&showtitle=false&type=js"></script>
+              </span>
+              <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=1&showtitle=false&type=js"></script>
+              </span>
+              <span>
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=1&showtitle=false&type=js"></script>
+              </span> -->
+            </div>
+          </div>
+            <!-- <div class="ticker-tip">
+              <div class="ticker-tip-info">
+                <i class ="icon-info">i</i>
+                <span>The Gas Mask will make you look like a badass.<span>
+               </div>
+            </div>   -->
+            <div class="ticker-title">
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+              <span>Sports News</span>
+            </div>
+            <div class="ticker-news">
+              <span>
+                <span>Criminals attempt brazen robbery at downtown bank...</span>
+                <span>Citizens are encouraged to use alternate routes during rush hour...</span>
+                <span>Expect evening commute delays due to pure chaos and mayhem...</span>
+                <span>Criminals attempt brazen robbery at downtown bank...</span>
+                <span>Citizens are encouraged to use alternate routes during rush hour...</span>
+              </span>
+            </div>
+          </div>
     </footer>
     <!-- Footer Section End -->
     <!-- Search model -->
@@ -311,8 +408,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<div class="search-close-switch">+</div>
 			<form class="search-model-form">
 				<input type="text" id="search-input" placeholder="Search here.....">
-			</form>
-		</div>
+            </form>
+        </div>
+        
 	</div>
     <!-- Search model end -->
     
