--- a/about-us.html
+++ b/about-us.html
@@ -68,20 +68,18 @@
     <!-- Header End -->
     <!-- Hero Section Begin -->
     <div class="heroRow">
-
-    
-    <div class="hero-section set-bg"  data-setbg="img/team/404.jpg">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="hero-text">
-              <h1>About us</h1>
+      <div class="hero-section1 set-bg" data-setbg="img/team/404.jpg">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="hero-text">
+                <h1>About us</h1>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
     <!-- Hero Section End -->
     <!-- About Us Section Begin -->
     <section class="about-us-section spad">
@@ -90,17 +88,12 @@
           <div class="col-lg-6">
             <div class="about-text">
               <div class="section-title">
-                <h2>All you need to know <br />about MMA</h2>
+                <h3>All you need to know <br />about MMA</h3>
               </div>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-                ipsum suspendisse ultrices gravida. Risus commodo viverra
-                maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Quis ipsum
-                suspendisse ultrices gravida. Risus commodo viverra maecenas
-                accumsan lacus vel facilisis.
+                known as cage fighting, is a full-contact combat sport that
+                allows striking and grappling, both standing and on the ground,
+                using techniques from various combat sports and martial arts.
               </p>
               <a href="https://www.ufc.com/" target="_blank" class="primary-btn"
                 >Read More</a
@@ -125,8 +118,8 @@
               <div class="counter-head">
                 <h2>The Process</h2>
                 <p>
-                  Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
-                  maecenas accumsan lacus vel facilisis.
+                  This group used multiple coding procedures to make this
+                  collabrotive site.
                 </p>
               </div>
               <div class="counter-btn">
@@ -190,7 +183,7 @@
         <div class="row">
           <div class="col-lg-10 offset-lg-1 text-center">
             <div class="section-title">
-              <h2>Team behind the machine</h2>
+              <h3>Team behind the machine</h3>
               <p>
                 This group of coders were responsible for the functionality and
                 structure of the website. Using skills gained through
@@ -212,12 +205,10 @@
               <div class="team-info-nick">
                 <!--  ///button aninimation start// -->
                 <div class="team-member-desc">
-                  <h3>Nicholas Nwanochie</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Quis ipsum suspendisse ultrices gravida. Risus
-                    commodo viverra maecenas accumsan lacus vel facilisis.
+                  <h3 class="red">Nicholas Nwanochie</h3>
+                  <p class="red">
+                    Studied software engineering in Kennesaw State University
+                    and is pursuing a career in web development and programming.
                   </p>
                 </div>
                 <div class="team-member-certification">
@@ -246,7 +237,7 @@
                 <!--  ///button aninimation start// -->
                 <div class="team-member-desc">
                   <h3>Steven</h3>
-                  <p>
+                  <p class="red">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Quis ipsum suspendisse ultrices gravida. Risus
@@ -279,7 +270,7 @@
                 <!--  ///button aninimation start// -->
                 <div class="team-member-desc">
                   <h3>Kazim</h3>
-                  <p>
+                  <p class="red">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Quis ipsum suspendisse ultrices gravida. Risus
@@ -314,11 +305,13 @@
 
                 <div class="team-member-desc">
                   <h3>Sean</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Quis ipsum suspendisse ultrices gravida. Risus
-                    commodo viverra maecenas accumsan lacus vel facilisis.
+                  <p class="red">
+                    "We build the internet" was something that was spoken in one of my first coding classes and in so many ways this is
+                    true. As a full-stack engineer, I am fortunate to be part of an industry that shapes the way we interact act with the
+                    digital world around us. I am proud to be part of this and look forward to applying what I know and furthering my coding
+                    knowledge.
+                    If you would like to know more about my coding, marketing, and project management experiences or would like to discuss
+                    working together on a project, please feel free to contact me at <a href="https://www.linkedin.com/in/seanapage">https://www.linkedin.com/in/seanapage.</a>.
                   </p>
                 </div>
                 <div class="team-member-certification">
