--- a/become.html
+++ b/become.html
@@ -73,6 +73,7 @@
     <!-- Hero Section Begin -->
     <div id="" class="hero-section set-bg">
       <img height="500px" src="img/team/fist.jpg" alt="" />
+
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -102,13 +103,14 @@
                 >
               </div>
 
-              <div class="blog-widget">
+              <div id="likes-button-9" class="blog-widget">
                 <ul>
                   <li>
-                    <img src="img/like.png" alt="" /> <span>15 Likes</span>
+                    <img src="img/like.png" alt="" />
+                    <span id="count-likes-9"> Likes</span>
                   </li>
                   <li>
-                    <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                    <img src="img/chat.png" alt="" /> <span>0 Comments</span>
                   </li>
                 </ul>
               </div>
@@ -140,7 +142,7 @@
                       <span id="count-likes-1"> Likes</span>
                     </li>
                     <li>
-                      <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                      <img src="img/chat.png" alt="" /> <span>0 Comments</span>
                     </li>
                   </ul>
                 </div>
@@ -172,7 +174,7 @@
                       <span id="count-likes-2"> <div id="like2"></div></span>
                     </li>
                     <li>
-                      <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                      <img src="img/chat.png" alt="" /> <span>0 Comments</span>
                     </li>
                   </ul>
                 </div>
@@ -193,10 +195,11 @@
                 >
               </div>
 
-              <div class="blog-widget">
+              <div id="likes-button-3" class="blog-widget">
                 <ul>
                   <li>
-                    <img src="img/like.png" alt="" /> <span>15 Likes</span>
+                    <img src="img/like.png" alt="" />
+                    <span id="count-likes-3"> Likes</span>
                   </li>
                   <li>
                     <img src="img/chat.png" alt="" /> <span>3 Comments</span>
@@ -217,10 +220,11 @@
                 >
               </div>
 
-              <div class="blog-widget">
+              <div id="likes-button-4" class="blog-widget">
                 <ul>
                   <li>
-                    <img src="img/like.png" alt="" /> <span>15 Likes</span>
+                    <img src="img/like.png" alt="" />
+                    <span id="count-likes-4"> Likes</span>
                   </li>
                   <li>
                     <img src="img/chat.png" alt="" /> <span>3 Comments</span>
@@ -230,26 +234,30 @@
             </div>
           </div>
           <div id="ex5" class="col-lg-3 col-md-6">
-            <div class="single-blog-item blog-video">
+            <div class="single-blog-item blog-item">
               <div class="blog-img">
-                <img id="light" src="img/team/tips.jpg" alt="" />
-                <div class="play-btn">
-                  <a
-                    href="https://www.youtube.com/embed/CL7nl55XPbA"
-                    class="pop-up"
-                    ><i class="fa fa-play"></i
-                  ></a>
-                </div>
+                <a
+                  href="https://www.youtube.com/embed/-bCXJQQi12w"
+                  target="_blank"
+                  ><img id="light" src="img/team/tips.jpg" alt=""
+                /></a>
               </div>
               <div class="blog-text">
-                <h3>fightTIPS: Punching While Moving Backwards</h3>
-                <div class="blog-widget">
+                <span class="blog-time">Feb 01, 2020</span>
+                <h3>
+                  FightTIPS:
+                </h3>
+                <p>
+                  Why You SHOULD Practice Predetermined Combos
+                </p>
+                <div id="likes-button-5" class="blog-widget">
                   <ul>
                     <li>
-                      <img src="img/like.png" alt="" /> <span>15 Likes</span>
+                      <img src="img/like.png" alt="" />
+                      <span id="count-likes-5"> Likes</span>
                     </li>
                     <li>
-                      <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                      <img src="img/chat.png" alt="" /> <span>0 Comments</span>
                     </li>
                   </ul>
                 </div>
@@ -257,27 +265,30 @@
             </div>
           </div>
           <div id="ex5" class="col-lg-3 col-md-6">
-            <div class="single-blog-item blog-video">
+            <div class="single-blog-item blog-item">
               <div class="blog-img">
-                <img id="light" src="img/team/tips.jpg" alt="" />
-                <div class="play-btn">
-                  <a
-                    class="pop-up"
-                    href="https://www.youtube.com/embed/_xERtLkw8Kc"
-                  >
-                    <i class="fa fa-play"></i>
-                  </a>
-                </div>
+                <a
+                  href="https://www.youtube.com/embed/CL7nl55XPbA"
+                  target="_blank"
+                  ><img id="light" src="img/team/tips.jpg" alt=""
+                /></a>
               </div>
               <div class="blog-text">
-                <h3>fightTIPS: Stop a Wrestler's Double-Leg Takedown</h3>
-                <div class="blog-widget">
+                <span class="blog-time">Feb 13, 2020</span>
+                <h3>
+                  FightTIPS:
+                </h3>
+                <p>
+                  Stop a Wrestler's Double-Leg Takedown
+                </p>
+                <div id="likes-button-6" class="blog-widget">
                   <ul>
                     <li>
-                      <img src="img/like.png" alt="" /> <span>15 Likes</span>
+                      <img src="img/like.png" alt="" />
+                      <span id="count-likes-6"> Likes</span>
                     </li>
                     <li>
-                      <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                      <img src="img/chat.png" alt="" /> <span>0 Comments</span>
                     </li>
                   </ul>
                 </div>
@@ -296,13 +307,14 @@
                 >
               </div>
 
-              <div class="blog-widget">
+              <div id="likes-button-7" class="blog-widget">
                 <ul>
                   <li>
-                    <img src="img/like.png" alt="" /> <span>15 Likes</span>
+                    <img src="img/like.png" alt="" />
+                    <span id="count-likes-7"> Likes</span>
                   </li>
                   <li>
-                    <img src="img/chat.png" alt="" /> <span>3 Comments</span>
+                    <img src="img/chat.png" alt="" /> <span>0 Comments</span>
                   </li>
                 </ul>
               </div>
