--- a/about-us.html
+++ b/about-us.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="col-lg-2 col-md-2">
               <div class="logo">
-                <a href="./index.html"><img src="img/logo.png" alt=""/></a>
+                <a href="./index.html"><img height="100px" src="img/team/octagon.png" alt=""/></a>
               </div>
             </div>
             <div class="col-lg-10 col-md-10">
