added all the pictures and fixed the function

--- a/tickets.html
+++ b/tickets.html
@@ -19,9 +19,10 @@
                     <div> PLaceHolder</div>
                 </div>
             </div>
-            <div class="d-flex flex-row flex-wrap justify-content-center z-index">
+            <!-- d-flex flex-row flex-wrap justify-content-center z-index -->
+            <div class="row justify-content-center">
                 <h1 class= "text-danger text-center">Fighter Portal</h1>
-                <div class= "row">
+                <div class= "row w-100">
                     <div id="character-box" class= "col-4"></div>
                     <div class= "Versus d-flex align-items-center justify-content-center text-light col-4">VS</div>
                     <div id="character-box2" class= "col-4"></div>
